<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:paddingBottom="20dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:id="@+id/constraintLayout3">

        <ImageView
            android:visibility="visible"
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:src="@android:drawable/btn_star"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_height="120dp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="229dp"
            android:layout_height="0dp"
            android:text="@string/about_title"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:textColor="@color/cardview_light_background"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/version_app"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_author_name"
        android:textAllCaps="true"
        android:background="#F1F1F1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textColor="#272323"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>